# buddyalloc

./: Cargo.toml  README.md
.github/workflows/: Ubuntu64.yaml  Win64.yaml  ci.yaml
examples/: allocator.rs
src/: heap.rs  lib.rs  math.rs
