[package]
name = "buddyalloc"
version = "0.1.5"
authors = ["Eric Kidd <git@randomhacks.net>", "Jethro Beekman <jethro@jbeekman.nl>", "Justin Moore <me@justinm.one>"]

description = "Safe and simple drop-in allocator for Rust running on embedded or bare metal systems (no_std)"
homepage = "https://github.com/DrChat/buddyalloc"
repository = "https://github.com/DrChat/buddyalloc"
readme = "README.md"
keywords = ["no_std", "kernel", "allocator"]
license = "Apache-2.0/MIT"
edition = "2018"

[features]

[dependencies]
